--- a/src/font.css
+++ b/src/font.css
@@ -1,4 +1,4 @@
 @font-face {
-  font-family: 'Ilisarniq', sans-serif;
+  font-family: 'Ilisarniq';
   src: local('Ilisarniq'), url('./assets/fonts/Ilisarniq.ttf') format('truetype');
 }
