--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,7 @@
 }
 body,
 html {
-  font-family: 'Ilisarniq', sans-serif !important;
+  font-family: 'Ilisarniq', sans-serif;
   font-size: 16px;
   font-weight: 400;
 }
